@startuml
'https://plantuml.com/class-diagram

abstract class Pizza {
    prepare():void
    bake():void
    cut():void
    box():void
}

class CheesePizza
class GreekPizza
class OrderPizza
class OrderPizza2
class OrderPizza3
class PepperPizza

Pizza o-- CheesePizza
Pizza o-- GreekPizza
Pizza o-- PepperPizza
Pizza *.. OrderPizza
Pizza *.. OrderPizza2
Pizza *.. OrderPizza3

CheesePizza *.. OrderPizza
GreekPizza *.. OrderPizza

@enduml